<resources>
    <string name="app_name" translatable="false">Snap Drama</string>
    <string name="tyebsnbdanadjakjjdajjaoaduioskmdjk" translatable="false">VkX19zR+sx3QLUR7MqARhwvUXa68NPDAP7Ivc=</string>
    <string name="facebook_app_id" translatable="false">2004808240250033</string>
    <string name="fb_login_protocol_scheme" translatable="false">2004808240250033</string>
    <string name="facebook_client_token" translatable="false">9c9b0f87ac97bec1b0dcd49a4147a3db</string>
    <string name="awsdahdbh" translatable="false">S7M6SE36</string>
    <string name="end_point" translatable="false">checkout</string>
    <string name="term2"><u>Privacy Policy</u></string>
    <string name="term1"><u>Terms of Use</u></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="consumption_records">Consumption Records</string>
    <string name="home">Home</string>
    <string name="for_you">For You</string>
    <string name="my_list">My List</string>
    <string name="profile">Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="coins">Coins</string>
    <string name="top_up">Top Up</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_the_verification_code_to_your_phone_number">We have sent the verification code to your phone number</string>
    <string name="didn_t_receive_a_otp">Didn’t receive a OTP?</string>
    <string name="reward_coins">Reward Coins</string>
    <string name="member_points">Member Points</string>
    <string name="join_membership">Join Membership</string>
    <string name="weekly_membership">Weekly Membership</string>
    <string name="annual_membership">Annual Membership</string>
    <string name="members_only_dramas">Members - Only Dramas</string>
    <string name="search">Search...</string>
    <string name="topup">Topup</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="notification_permission_denied">Notification Permission Denied</string>
    <string name="google_sign_in_failed_account_null">Google Sign-In failed: Account is null</string>
    <string name="google_sign_in_failed_error_code">Google Sign-In failed. Error Code: </string>
    <string name="google_sign_in_cancelled">Google Sign-In cancelled (Code: </string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_valid_number">Enter valid number</string>
    <string name="google_sign_in_not_available">Google Sign-In not available. Please check your internet connection and try again.</string>
    <string name="google_sign_in_timed_out">Google Sign-in timed out. Please try again.</string>
    <string name="google_sign_in_failed">Google Sign-In failed</string>
    <string name="failed_prefix">Failed: </string>
    <string name="otp_sent">OTP Sent</string>
    <string name="login_successful">Login Successful</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="gifts">Gifts</string>
    <string name="enter_gift_code_here">Enter Gift Code Here</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="redeem">Redeem</string>
    <string name="tips">Tips</string>
    <string name="tips_1">1. The redemption code can only be used to redeem free rewards and cannot be used to redeem coins or memberships.</string>
    <string name="tips_2">2. The same code can only be used once per account.</string>
    <string name="tips_3">3. Each code has a validity period and can only be redeemed within this period.</string>
    <string name="tips_4">4. Each code has a maximum number of users who can redeem it. Once the limit is reached, it can no longer be redeemed.</string>
    <string name="add_list">Add List</string>
    <string name="added_1">Added ..</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="unable_to_detect_otp">Unable to detect OTP automatically. Please enter manually.</string>
    <string name="request_blocked_please_try_again">Request Blocked. Please try again later.</string>
    <string name="enter_6_otp">Enter 6-digit OTP</string>
    <string name="otp_not_sent_please_wait">OTP not sent yet. Please wait or resend.</string>
    <string name="invalid_or_expired_otp">Invalid or expired OTP</string>
    <string name="suggestions1">Second Chance Love</string>
    <string name="suggestions2">Baby Come Back</string>
    <string name="suggestions3">Heirs &amp; Her</string>
    <string name="suggestions4">Claws to Crown</string>
    <string name="suggestions5">Revenge in White</string>
    <string name="suggestions6">Spy &amp; Marry Me</string>
    <string name="suggestions7">Mr. Period</string>
    <string name="suggestions8">Blueprint of Buried Bonds</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="google_sign_in_failed_please_try_again">Google Sign-In failed. Please try again.</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="log_in">Log In</string>
    <string name="id">ID</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="payment_id_copied">Payment ID Copied</string>
    <string name="payment_failed">Payment failed</string>
    <string name="ok">OK</string>
    <string name="stripe_checkout">Checkout</string>
    <string name="login">Login</string>
    <string name="history">History</string>
    <string name="no_data_found">No Data Found</string>
    <string name="language">Language</string>
    <string name="save_your_favorite_dramas_easily">Save your favorite dramas easily</string>
    <string name="youre_all_set">You\'re All Set!</string>
    <string name="all_preferences_saved_enjoy">All preferences saved.\nEnjoy a personalized drama experience.</string>
    <string name="youre_ready_to_watch">You\'re Ready to Watch!</string>
    <string name="get_ready_to_dive_into_endless_short_dramas">Get ready to dive into endless short dramas made just for you.</string>
    <string name="player_features_at_your_fingertips">Player Features At Your Fingertips</string>
    <string name="add_to_list">Add to List</string>
    <string name="playback_speed">Playback Speed</string>
    <string name="for_you_page">For You Page</string>
    <string name="swipe_up_to_change_episode_drama">Swipe up to change episode / drama</string>
    <string name="homepage_features">Homepage Features</string>
    <string name="explore_everything_snap_drama_has_to_offer">Explore everything Snap Drama has to offer.</string>
    <string name="find_dramas_by_genre">Find dramas by genre</string>
    <string name="find_your_favorite_dramas">Find your favorite dramas</string>
    <string name="trending">Trending</string>
    <string name="see_whats_popular">See what\'s popular</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="pick_up_where_you_left_off">Pick up where you left off</string>
    <string name="trending_now">Trending Now</string>
    <string name="please_select_at_least_one_language">Please select at least one language</string>
    <string name="select_first">select first</string>
    <string name="please_select_at_least_one_category">Please select at least one category</string>
    <string name="choose_your_content_preferences">Choose your content preferences</string>
    <string name="preferences_saved">Preferences Saved</string>
    <string name="content_preferences_saved">Content\nPreferences\nSaved</string>
    <string name="romance">Romance</string>
    <string name="billionaire">Billionaire</string>
    <string name="revenge">Revenge</string>
    <string name="fantasy">Fantasy</string>
    <string name="marriage">Marriage</string>
    <string name="campus">Campus</string>
    <string name="time_travel">Time Travel</string>
    <string name="mafia">Mafia</string>
    <string name="language_preferences_saved">Language\nPreferences\nSaved</string>
    <string name="language_set_successfully">Language Set Successfully</string>
    <string name="help_feedback">Help &amp; Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="please_login_first">Please Login First</string>
    <string name="payment_init_failed">Payment init failed: Network error</string>
    <string name="payment_init_failed_server">Payment init failed: Server returned error</string>
    <string name="coins_added">coins added!</string>
    <string name="failed_to_add_coin">Failed to add coins</string>
    <string name="weekly_membership_activied">Weekly Membership activated! All episodes free &amp; Ads free for 1 week.</string>
    <string name="failed_to_activate_membership">Failed to activate membership. Try again.</string>
    <string name="yearly_membership_activied">Yearly Membership activated! All episodes free &amp; Ads free for 1 year.</string>
    <string name="offer_expired_soon">Offer Expired Soon</string>
    <string name="pay_now">Pay Now</string>
    <string name="sign_in">Sign In</string>
    <string name="continues">Continue</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="skip">Skip</string>
    <string name="by_continue_you_agree">By continuing, you agree to our</string>
    <string name="transaction_history">Transaction History</string>
    <string name="membership">Membership</string>
    <string name="why_join">Why Join?</string>
    <string name="why_join1">Ads-free Unlimited Viewing</string>
    <string name="why_join2">1080 Quality</string>
    <string name="why_join3">Daily Points Reward</string>
    <string name="why_join4">Gift Drama to Friends</string>
    <string name="why_join5">Members-only Dramas</string>
    <string name="why_join6">Gift a Membership to a friend</string>
    <string name="join_now">Join Now</string>
    <string name="auto_renew">Auto-renew</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="settings">Settings</string>
    <string name="watch_trending_short">Watch Trending Short Dramas Anytime</string>
    <string name="time_limit_offer">Time Limited Offer</string>
    <string name="limited_time">Limited Time</string>
    <string name="unlimited_time">Unlimited Viewing</string>
    <string name="download">Download</string>
    <string name="_1080_quality">1080 Quality</string>
    <string name="daily_points_reward">Daily Points Reward</string>
    <string name="yearly_membership">Yearly Membership</string>
    <string name="premium_value">₹299/week for the first 3 weeks, then ₹599/week</string>
    <string name="transection_details">Transaction Details</string>
    <string name="amount">Amount</string>
    <string name="created">Created</string>
    <string name="currency">Currency</string>
    <string name="customer_id">Customer ID</string>
    <string name="description">Description</string>
    <string name="payment_id">Payment ID</string>
    <string name="payment_method">Payment Method</string>
    <string name="receipt_email">Receipt Email</string>
    <string name="status">Status</string>
    <string name="popular">Popular</string>
    <string name="new_">New</string>
    <string name="ranking">Ranking</string>
    <string name="categories">Categories</string>
    <string name="more_like_this">More Like This</string>
    <string name="daily_points">Daily Points</string>
    <string name="no_internt_connection">No Internet Connection</string>
    <string name="no_internt_connection_des">No internet connection found.\nCheck your connection.</string>
    <string name="retry">Retry</string>
</resources>