<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/image_back_scn_icon"
            app:tint="@color/whiteMy" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:shimmer_auto_start="true"
            app:shimmer_base_alpha="1.0"
            app:shimmer_highlight_alpha="0.6"
            app:shimmer_highlight_color="#FFFFFF"
            app:shimmer_repeat_count="-1"
            app:shimmer_repeat_mode="restart">

            <TextView
                android:id="@+id/tvNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_back_category4"
                android:fontFamily="@font/mulish_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </com.facebook.shimmer.ShimmerFrameLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_bold"
                android:gravity="center"
                android:text="@string/choose_your_content_preferences"
                android:textColor="@color/white"
                android:textSize="@dimen/_19sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chipRomance"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/romance"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/chipBillionaire"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/billionaire"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chipRevenge"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/revenge"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/chipFantasy"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/fantasy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chipMarriage"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/marriage"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/chipCampus"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/campus"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/chipTimeTravel"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/time_travel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <Space
                    android:layout_width="12dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/chipMafia"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_content_category_unselected"
                    android:fontFamily="@font/mulish_semibold"
                    android:gravity="center"
                    android:text="@string/mafia"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearSmallNtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_160sdp"
        android:orientation="vertical"
        android:visibility="gone" />

</LinearLayout>
