<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/background_new_list2"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/image_no_internet" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_semibold"
                android:gravity="center"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/no_internt_connection"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/mulish_medium"
                android:gravity="center"
                android:text="@string/no_internt_connection_des"
                android:textColor="@color/grey_colors"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/vesm__cancel"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_login_button"
                    android:fontFamily="@font/mulish_medium"
                    android:paddingHorizontal="@dimen/_30sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:text="@string/retry"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
